# VelloCompose

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/linebender/vellocomposeapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/linebender/vellocomposeapp/: MainActivity.kt
app/src/main/java/org/linebender/vellocomposeapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/linebender/vellocomposeapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
vello/: build.gradle.kts
vello/src/androidTest/java/org/linebender/vello/: ExampleInstrumentedTest.kt
vello/src/main/: CMakeLists.txt
vello/src/main/cpp/: CMakeLists.txt  vello.cpp
vello/src/main/java/org/linebender/vello/: NativeLib.kt  Vello.kt
vello/src/main/java/org/linebender/vello/compose/: VelloCompose.kt
vello/src/main/rust/: Cargo.toml
vello/src/main/rust/src/: ffi.rs  lib.rs
vello/src/main/rust/src/util/: README.md  mod.rs
vello/src/test/java/org/linebender/vello/: ExampleUnitTest.kt
