[package]
name = "vello_jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
log = "0.4.22"
android_logger = "0.14.1"

jni = "0.21.1"
libc = "0.2.161"
wgpu = "22.1.0"
vello = "0.3.0"
ndk = { version = "0.9.0", features = ["api-level-30"] }
pollster = "0.3.0"
bytemuck = "1.19.0"
